@@ -8,10 +8,10 @@ Disassembly of section .text:
 	\.\.\.
 
 00001008 <__bar_veneer>:
-    1008:	e59fc000 	ldr	ip, \[pc, #0\]	; 1010 <__bar_veneer\+0x8>
-    100c:	e08ff00c 	add	pc, pc, ip
-    1010:	02000001 	.word	0x02000001
-    1014:	00000000 	.word	0x00000000
+    1008:	e59fc004 	ldr	ip, \[pc, #4\]	; 1014 <__bar_veneer\+0xc>
+    100c:	e08fc00c 	add	ip, pc, ip
+    1010:	e12fff1c 	bx	ip
+    1014:	02000001 	.word	0x02000001
 Disassembly of section .foo:
 
 02001014 <bar>:
